[package]
name = "scope"
version = "0.1.2"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "A high-assurance framework for scoped lifetimes and deterministic execution boundaries. Part of the Honest-Classified security suite."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/scope"

[features]
default = []
mio = ["dep:mio"]
local_wake = []

[dependencies]
mio = { version = "1.1.1", features = ["os-poll", "net"], optional = true }
